resources/style.css
/*Universal*/
html {
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  color: hsl(0, 0%, 20%);
}

body {
  margin: 0;
  padding: 0;

} /*Removes default margin and padding (that causes space above header).*/

.flex {
  display: flex;
}

.content-container {
  max-width: 960px;
  margin: auto;
}

a {
  text-decoration: none; /* Removes underline from links*/
}

p {
  font-size: 0.75rem;
  line-height: 1rem;
}

/*Header*/
header {
  line-height: 2rem;
  width: 100%;
  height: 4rem;
  background-color: hsl(0, 0%, 100%);
  position: fixed;
  z-index: 2;
}

header nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 1rem 1.5rem;
}

nav div {
  display: flex;
  align-items: center;
}

ul li {
  display: inline;
  padding-left: 1rem;
}

header a {
  color: #4a4a4a;
}

header span {
  text-transform: uppercase;
  font-family: 'Ubuntu', sans-serif;
}

header .bold {
  font-weight: 900;
}

header .light {
  color: hsl(0, 0%, 55%);
}

header .mobile {
  display: none;
}

@media only screen and (max-width: 595px) {
  header .desktop {
    display: none;
  }
  header .mobile {
    display: flex;
    justify-content: space-around;
    align-items: center;
  }
}

/*Banner Section*/
.banner {
  background-color: hsl(0, 0%, 80%);
  width: 100%;
  flex-direction: row;
  align-items: center;
  position: relative;
  top: 4rem;
}

.banner img {
  width: 60%;
  object-fit: contain;
  margin: 2rem 0;
  padding: 0 1.5rem;
  box-sizing: border-box;
}

.banner-text {
  margin: auto;
  width: 40%;
}

@media only screen and (max-width: 595px) {
  .banner {
    flex-direction: column;
  }
  .banner img {
    width: 100%;
    padding: 0;
    margin: 0;
  }
  .banner-text {
    width: auto;
    margin: 2rem 1rem;
    display: flex;
    flex-direction: column;
  }
}

/*Information Section*/
.info {
  background-color: hsl(0, 0%, 100%);
  padding-top: 4rem;
  padding-bottom: 2rem;
  width: 100%;
  align-items: center;
}

.info-left {
  width: 60%;
  flex-direction: column;
}

.info-left img {
  width: 100%;
  object-fit: contain;
  padding: 1rem 1.5rem;
  box-sizing: border-box;
}

.left-text {
  min-width: 100%;
  padding: 0 1.5rem;
  box-sizing: border-box;
}

.info-right {
  width: 40%;
  flex-direction: column;
}

.panel-right {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.info-right .panel-right {
  border: 1px solid hsl(0, 0%, 80%);
  box-sizing: border-box;
}

.panel-right img {
  width: 35%;
  padding: 1rem;
}

.right-text {
  width: 65%;
}

.lecture {
  background-color: hsl(0, 0%, 80%);
}

@media only screen and (max-width: 595px) {
  .info-left {
    display: none;
  }
  .info-right {
    width: auto;
    flex-direction: column;
    align-items: center;
  }
  .right-text {
    width: 100%;
  }
  .panel-right img {
    width: 100%;
  }
}

/*Courses Section*/
.courses {
  background-color: hsl(0, 0%, 90%);
  padding-top: 2rem;
  width: 100%;
  flex-direction: column;
}

.courses h1 {
  width: 100%;
  text-align: center;
}

.courses .mobile {
  display: none;
}

.course-row {
  max-width: 100%;
  margin: 1rem 3rem;
}

.panel-courses {
  background-color: hsl(0, 0%, 100%);
  min-width: 17%;
}

.row-1 .panel-courses {
  margin: 1rem 1rem 0 1rem;
}

.row-2 .panel-courses {
  margin: 0 1rem 1rem 1rem;
}

.panel-courses img {
  height: auto;
  width: 100%;
  object-fit: contain;
}

.course-text {
  margin: 1rem 1rem 1.5rem 1rem;
}

@media only screen and (max-width: 595px) {
  .course-row {
    display: none;
  }
  .courses {
    border: 1px solid red;
    background-color: hsl(0, 0%, 100%);
    flex-direction: column;
    align-items: center;
    padding: 2rem 2rem 0.5rem 2rem;
    width: auto;
  }
  .courses .mobile {
    border: 1px solid blue;
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
  }
  .courses .mobile p {
    border: 1px solid yellow;
    margin: 0 1rem 0.5rem 1rem;
    background-color: hsl(0, 0%, 90%);
    padding: 1rem 1rem 1.5rem 1rem;
    width: 100%;
  }
}

/*Thesis Section*/
.thesis {
  background-color: hsl(0, 0%, 100%);
  padding: 2rem 0;
  width: 100%;
  flex-direction: column;
}

.thesis h1 {
  width: 100%;
  text-align: center;
}

.thesis .mobile {
  display: none;
}

.thesis-left-right {
  /*display: flex;*/
  flex-direction: row;
  align-items: center;
}

.thesis-left {
  width: 60%;
  flex-direction: column;
}

video {
  width: 100%;
  margin: 1rem 0;
  padding: 0 1.5rem;
  box-sizing: border-box;
}

  /* See .left-text in Information section above that also applies here*/

.thesis-right {
  width: 40%;
  flex-direction: column;
}

  /* See .panel-right and .right-text in Information section above that also applies here*/

.fisma {
  background-color: hsl(0, 0%, 80%);
}

@media only screen and (max-width: 595px) {
  .thesis .desktop {
    display: none;
  }
  .thesis .mobile {
    display: block;
  }
  video {
    width: 100%;
    margin: 0;
    padding: 0;
  }
}

/*Footer*/
hr {
  border: 0;
  height: 1px;
  background: #333;
  background-image: linear-gradient(to right, #ccc, #333, #ccc);
  margin: 0;
}

footer {
  width: 100%;
  background-color: hsl(0, 0%, 100%);
  padding-bottom: 2rem;
}

footer nav {
  align-items: center;
  justify-content: space-between;
  margin: 1rem 1.5rem;
}

nav div {
  align-items: center;
}

ul li {
  display: inline;
  padding-left: 1rem;
}

footer a, .footer-text {
  color: #4a4a4a;
  font-size: 14px;
}

@media only screen and (max-width: 595px) {
  footer ul {
    display: none;
  }
  hr {
    display: none;
  }
  footer {
    border: 1px solid blue;
    padding: 0;
  }
  footer nav {
    border: 1px solid red;
  }
}

